--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,14 @@
 {
+  "builds": [
+    {
+      "src": "src/index.js",  
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html"  
     }
   ]
 }
